<resources>

    <string name="sharedPref">"facebookApp"</string>

    <string name="app_name">Filmster</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_splash_screen">SplashScreenActivity</string>
    <string name="action_settings">About</string>
    <string name="action_logout">Log out</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="actor_btn">Get Actor</string>
    <string name="title_activity_actor_detail">ActorDetailActivity</string>
    <string name="actor_default_name">John Doe</string>
    <string name="default_movie_name">Unknown</string>
    <string name="actor_default_birth">1993.28.01 - </string>
    <string name="actor_default_place_of_birth">Staten Island, New York</string>
    <string name="actor_default_popularity">81 </string>
    <string name="actor_default_homepage">HOMEPAGE</string>
    <string name="actor_default_text">This is an excellent actor that acted in action and romance</string>
    <string name="cast_string">Full cast</string>
    <string name="cast_title">Leading roles</string>
    <string name="roles_title">Known For</string>
    <string name="synopsis_text">Synopsis</string>
    <string name="biography_text">Biography</string>
    <string name="poplarity_heading">RATING</string>
    <string name="roles_text">Filmography</string>
    <string name="movie_details">Movie Details</string>
    <string name="runtime_movie">128 min</string>
    <string name="release_date">28.1.1993</string>
    <string name="release_text">Released</string>
    <string name="runtime_text">Runtime</string>
    <string name="full_crew">Full Crew</string>
    <string name="director_list">John Doe, Jane Doe</string>
    <string name="watchlist">Watchlist</string>
    <string name="watched">Watched Movies</string>


    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">412399092299440</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_search">search</string>
    <string name="search_hint">Write here...</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_home">Home</string>
    <string name="like_text">Like</string>
    <string name="watch_text">Watchlist</string>
    <string name="seen_text">Seen</string>


    <string name="drawer_item_search">Find Movie</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_watchlist">Watchlist</string>
    <string name="drawer_item_watched">Seen</string>
    <string name="drawer_item_section_header">Profile Options</string>
    <string name="drawer_item_logout">Logout</string>

</resources>
