<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:theme="@style/NoAction">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_movie"
        android:layout_width="match_parent"
        android:layout_height="@dimen/big_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="14dp"
            app:expandedTitleMarginEnd="30dp">

            <ImageView
                android:id="@+id/thumbnail_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:src="@drawable/large_movie_poster"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/sheet_text_scrim_height_bottom"
                android:layout_gravity="bottom"
                android:background="@drawable/scrim_bottom"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_movie"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:background="#64000000"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="hr.fer.dm.dm_app3.Activites.MovieDetailsActivity">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/synopsis_text"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/synopsis_text"/>

            <com.ms.square.android.expandabletextview.ExpandableTextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                android:id="@+id/tvOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/synopsis_text"
                expandableTextView:maxCollapsedLines="2"
                expandableTextView:animDuration="200">
                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="18sp"
                    android:textColor="#666666" />
                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"/>
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:id="@+id/overviewRuler"
                android:layout_below="@id/tvOverview"
                android:background="#b8b8b8"></View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/castTitleText"
                android:layout_below="@+id/overviewRuler"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/cast_title"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalLayout"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_below="@+id/castTitleText">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/firstLayout"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/person_placeholder"
                            android:id="@+id/firstImage"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/firstName"
                            android:text="@string/actor_default_name"
                            android:layout_below="@+id/firstImage"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/secondLayout"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/person_placeholder"
                            android:id="@+id/secondImage" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/secondName"
                            android:text="@string/actor_default_name"
                            android:layout_below="@+id/secondImage"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/thirdLayout"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/person_placeholder"
                            android:id="@+id/thirdImage"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/thirdName"
                            android:text="@string/actor_default_name"
                            android:layout_below="@+id/thirdImage"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fourthLayout"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/person_placeholder"
                            android:id="@+id/fourthImage"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fourthName"
                            android:text="@string/actor_default_name"
                            android:layout_below="@+id/fourthImage"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fifthLayout"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/person_placeholder"
                            android:id="@+id/fifthImage"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fifthName"
                            android:text="@string/actor_default_name"
                            android:layout_below="@+id/fifthImage"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sixthLayout"
                        android:layout_marginRight="10dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/person_placeholder"
                            android:id="@+id/sixthImage"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/sixthName"
                            android:text="@string/actor_default_name"
                            android:layout_below="@+id/sixthImage"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>


                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/castText"
                android:layout_below="@+id/horizontalLayout"
                android:layout_marginTop="10dp"
                android:paddingTop="2dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/cast_string"
                android:background="@drawable/text_view_click_background"
                android:clickable="true"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:id="@+id/castRuler"
                android:layout_below="@id/castText"
                android:background="#b8b8b8"></View>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvMovieHomepage"
                android:layout_below="@+id/castRuler"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:textSize="20sp"
                android:text="@string/actor_default_homepage"
                android:background="@drawable/text_view_click_background"
                android:clickable="true"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:id="@+id/linksRuler"
                android:layout_below="@id/tvMovieHomepage"
                android:background="#b8b8b8"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/linksRuler">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/hompageButtonHolder">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/homepageLink"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/image_home_button"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_weight="2"
                    android:id="@+id/imdbButtonHolder">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/imdbLink"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/imdb_icon_button"/>
                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
